--- a/demo-updated.html
+++ b/demo-updated.html
@@ -303,7 +303,7 @@
             blockExplorerUrls: ['https://sepolia.etherscan.io'],
             
             // Optional configuration
-            theme: 'default',
+            theme: 'defaultdark',
             position: 'bottom-right', // bottom-right, top-left, top-right, bottom-left, hidden
             faucetUrl: 'https://cloud.google.com/application/web3/faucet/ethereum/sepolia', // Set to null to hide faucet button
             iconUrls: []
